# weather-command

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  tox.ini
.github/workflows/: nightly_test.yaml  pypi_publish.yaml  testing.yaml
tests/: conftest.py  test_builder.py  test_cache.py  test_config.py  test_location.py  test_main.py  test_settings_commands.py  test_tui.py  test_weather.py
tests/assets/: cache.json  weather_command.yaml
weather_command/: __main__.py  _builder.py  _cache.py  _config.py  _location.py  _tui.py  _utils.py  _weather.py  errors.py  main.py  settings_commands.py
weather_command/errors/: __init__.py
weather_command/models/: current_weather.py  location.py  weather.py
