[tool.poetry]
name = "weather-command"
version = "6.1.5"
description = "Command line weather app"
authors = ["Paul Sanders <psanders1@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sanders41/weather-command"
homepage = "https://github.com/sanders41/weather-command"
documentation = "https://github.com/sanders41/weather-command"
keywords = ["weather", "cli"]

[tool.poetry.dependencies]
python = "^3.8"
rich = "13.7.1"
httpx = "0.27.0"
pydantic = "2.7.0"
camel-converter = {version = "3.1.1", extras = ["pydantic"]}
typer = "0.12.3"
tenacity = "8.2.3"
pyyaml = "6.0.1"

[tool.poetry.group.dev.dependencies]
mypy = "1.9.0"
pre-commit = "3.5.0"
pytest = "8.1.1"
pytest-cov = "5.0.0"
ruff = "0.4.0"
tomli = {version = "2.0.1", python = "<3.11"}
types-pyyaml = "6.0.12.20240311"
pytest-asyncio = "0.23.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
weather = "weather_command.main:app"

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["tomli.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=weather_command --cov-report term-missing"
asyncio_mode = "auto"

[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__.:", "pragma: no cover"]

[tool.ruff]
select = ["E", "F", "UP", "I001", "T201", "T203"]
ignore=[
  # Recommened ignores by ruff when using formatter
  "E501",
  "W191",
  "E111",
  "E114",
  "E117",
  "D206",
  "D300",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "COM812",
  "COM819",
  "ISC001",
  "ISC002",
]
line-length = 100
target-version = "py38"
fix = true
